# HeliumFlashTuner

./: .gitignore  LICENSE  README.md
flutter_app/: README.md  pubspec.yaml
flutter_app/android/: settings.gradle
flutter_app/android/app/: build.gradle
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/android/app/src/main/kotlin/com/heliumflashtuner/: MainActivity.kt
flutter_app/lib/: main.dart
flutter_app/lib/models/: tuner_model.dart
flutter_app/lib/screens/: tuner_screen.dart
flutter_app/lib/services/: audio_bridge.dart  note_utils.dart
flutter_app/lib/widgets/: oscilloscope_painter.dart
flutter_app/linux/: CMakeLists.txt
flutter_app/linux/runner/: main.cc  my_application.cc
flutter_app/macos/: .last_build_id  Podfile
flutter_app/macos/Runner/: DebugProfile.entitlements  Info.plist  MainFlutterWindow.swift  Release.entitlements
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
flutter_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_app/macos/Runner/Base.lproj/: MainMenu.xib
flutter_app/test/: note_utils_test.dart  widget_test.dart
flutter_app/windows/: CMakeLists.txt
flutter_app/windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  main.cpp  runner.exe.manifest  utils.cpp  utils.h  win32_window.cpp  win32_window.h
native/: CMakeLists.txt
native/Source/: PitchDetector.cpp  PitchDetector.h  TunerBridge.cpp  TunerBridge.h  TunerProcessor.cpp  TunerProcessor.h
native/scripts/: build_android.sh  build_linux.sh  build_macos.sh  build_windows.ps1
native/tests/: pitch_detector_synth  pitch_detector_synth.cpp
